fix: hide google maps place card by clipping top edge

--- a/src/scss/components/_map.scss
+++ b/src/scss/components/_map.scss
@@ -28,10 +28,10 @@
 
     iframe {
       position: absolute;
-      top: 0;
+      top: -100px;
       left: 0;
       width: 100%;
-      height: 100%;
+      height: calc(100% + 100px);
       border: none;
       z-index: 0;
     }
@@ -44,7 +44,8 @@
 
       iframe {
         position: relative;
-        height: 300px;
+        height: 400px; // 300px visible + 100px hidden at the top
+        margin-top: -100px;
       }
     }
   }
